--- a/CoreProcessingPipelineScripts/CNN/Mask_RCNN/Dockerfile
+++ b/CoreProcessingPipelineScripts/CNN/Mask_RCNN/Dockerfile
@@ -8,7 +8,13 @@ RUN micromamba install -y -n base wget -f /home/mambauser/environment.yml && mic
 
 ARG MAMBA_DOCKERFILE_ACTIVATE=1
 
-RUN wget https://data.swarts.gmi.oeaw.ac.at/treeringcrackscomb2_onlyring20210121T1457/mask_rcnn_treeringcrackscomb2_onlyring_0186.h5
+COPY mask_rcnn_treeringcrackscomb2_onlyring_0186.h5 .
+COPY testzz.tiff .
+
+# RUN apt-get -y update; apt-get -y install curl
+
+# RUN wget https://data.swarts.gmi.oeaw.ac.at/treeringcrackscomb2_onlyring20210121T1457/mask_rcnn_treeringcrackscomb2_onlyring_0186.h5
+# RUN curl -O -C - file:///home/user/Downloads/mask_rcnn_treeringcrackscomb2_onlyring_0186.h5
 
 ENV PATH "/home/mambauser/postprocessing:$MAMBA_ROOT_PREFIX/bin:$PATH"
 ENV PYTHONPATH "/home/mambauser:$PYTHONPATH"
